[package]
authors = ["Andrew Walbran <qwandor@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the GD32F1x0 family of microcontrollers"
keywords = ["arm", "cortex-m", "gd32", "hal"]
license = "MIT OR Apache-2.0"
name = "gd32f1x0-hal"
repository = "https://github.com/qwandor/gd32f1x0-hal"
documentation = "https://docs.rs/gd2f1x0-hal"
readme = "README.md"
edition = "2018"
version = "0.1.0"

[package.metadata.docs.rs]
features = ["gd32f130x8", "rt"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
bxcan = "0.5.0"
cast = { version = "0.2.5", default-features = false }
cortex-m = "0.7.2"
cortex-m-rt = "0.6.8"
embedded-dma = "0.1.2"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
gd32f1 = "0.1.0"
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }

[dev-dependencies]
byteorder = { version = "1.3.1",default-features = false }
cobs = { version = "0.1.4", default-features = false }
cortex-m-rtic = "0.5"
cortex-m-semihosting = "0.3.3"
crc16 = { version = "0.4.0", default-features = false }
either = { version = "1.5.2", default-features = false }
heapless = "0.6.1"
m = "0.1.1"
mfrc522 = "0.2.0"
panic-halt = "0.2.0"
panic-itm = "0.4.2"
panic-semihosting = "0.5.6"
serde = { version = "1.0.90", default-features = false }
serde_derive = "1.0.90"

[features]
device-selected = []
doc = []
rt = ["gd32f1/rt"]
gd32f130 = ["gd32f1/gd32f130", "device-selected"]
gd32f130x4 = ["gd32f130"]
gd32f130x6 = ["gd32f130"]
gd32f130x8 = ["gd32f130"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

#[[example]]
#name = "usb_serial"
#required-features = ["rt", "stm32-usbd"]

#[[example]]
#name = "usb_serial_interrupt"
#required-features = ["rt", "stm32-usbd"]

#[[example]]
#name = "usb_serial_rtic"
#required-features = ["rt", "stm32-usbd"]

[[example]]
name = "blinky_timer_irq"
required-features = ["rt"]

#[[example]]
#name = "blinky_rtcalarm_irq"
#required-features = ["rt"]

#[[example]]
#name = "qei"
#required-features = ["medium"]

[[example]]
name = "timer-interrupt-rtic"
required-features = ["rt"]

#[[example]]
#name = "exti"
#required-features = ["rt"]

#[[example]]
#name = "can-echo"
#required-features = ["has-can"]

#[[example]]
#name = "can-loopback"
#required-features = ["has-can"]

#[[example]]
#name = "can-rtic"
#required-features = ["has-can", "rt"]
