[package]
authors = ["Andrew Walbran <qwandor@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the GD32F1x0 family of microcontrollers"
keywords = ["arm", "cortex-m", "gd32", "hal"]
license = "MIT OR Apache-2.0"
name = "gd32f1x0-hal"
repository = "https://github.com/gd32-rust/gd32f1x0-hal"
readme = "README.md"
edition = "2018"
version = "0.7.1"

[package.metadata.docs.rs]
features = ["gd32f130x8", "rt"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
bxcan = "0.7.0"
cast = { version = "0.3.0", default-features = false }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-dma = "0.2.0"
embedded-hal = { version = "1.0.0", features = ["unproven"] }
gd32f1 = { version = "0.8.0", features = ["critical-section"] }
nb = "1.1.0"
void = { version = "1.0.2", default-features = false }

[dev-dependencies]
byteorder = { version = "1.5.0", default-features = false }
cobs = { version = "0.2.3", default-features = false }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = "0.5.0"
crc16 = { version = "0.4.0", default-features = false }
either = { version = "1.9.0", default-features = false }
heapless = "0.8.0"
m = "0.1.1"
mfrc522 = "0.6.0"
panic-halt = "0.2.0"
panic-itm = "0.4.2"
panic-semihosting = "0.6.0"
serde = { version = "1.0.189", default-features = false }
serde_derive = "1.0.189"

[features]
device-selected = []
doc = []
rt = ["gd32f1/rt"]
gd32f130 = ["gd32f1/gd32f130", "device-selected"]
gd32f130x4 = ["gd32f130"]
gd32f130x6 = ["gd32f130"]
gd32f130x8 = ["gd32f130"]
gd32f150 = ["gd32f1/gd32f150", "device-selected"]
gd32f150x4 = ["gd32f150"]
gd32f150x6 = ["gd32f150"]
gd32f150x8 = ["gd32f150"]
gd32f170 = ["gd32f1/gd32f170", "device-selected"]
gd32f170x4 = ["gd32f170"]
gd32f170x6 = ["gd32f170"]
gd32f170x8 = ["gd32f170"]
gd32f190 = ["gd32f1/gd32f190", "device-selected"]
gd32f190x4 = ["gd32f190"]
gd32f190x6 = ["gd32f190"]
gd32f190x8 = ["gd32f190"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

#[[example]]
#name = "usb_serial"
#required-features = ["rt", "stm32-usbd"]

#[[example]]
#name = "usb_serial_interrupt"
#required-features = ["rt", "stm32-usbd"]

#[[example]]
#name = "usb_serial_rtic"
#required-features = ["rt", "stm32-usbd"]

[[example]]
name = "blinky_timer_irq"
required-features = ["rt"]

#[[example]]
#name = "blinky_rtcalarm_irq"
#required-features = ["rt"]

#[[example]]
#name = "qei"
#required-features = ["medium"]

[[example]]
name = "timer-interrupt-rtic"
required-features = ["rt"]

#[[example]]
#name = "exti"
#required-features = ["rt"]

#[[example]]
#name = "can-echo"
#required-features = ["has-can"]

#[[example]]
#name = "can-loopback"
#required-features = ["has-can"]

#[[example]]
#name = "can-rtic"
#required-features = ["has-can", "rt"]
